<resources>
    <string name="app_name">vNFitness App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="step_1">Step 1</string>
    <string name="step_1_desc">Tell me more about you</string>
    <string name="email">Email</string>
    <string name="fullname">Full Name</string>
    <string name="age">Age</string>
    <string name="next">NEXT</string>
    <string name="step_2">Step 2</string>
    <string name="step_2_desc">Fill out your measurements correctly so that I can best help you!</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="chest">Chest (optional)</string>
    <string name="hip">Hip (optional)</string>
    <string name="waist">Waist (optional)</string>
    <string name="step_3">Step 3</string>
    <string name="step_3_desc">What is your fitness goal?</string>
    <string name="loose_body_fat">Loose Body Fat</string>
    <string name="loose_body_fat_desc">Ideal for your if you wish to burn excess body fat and get in shape.</string>
    <string name="gain_muscle">Gain Muscle</string>
    <string name="gain_muscle_desc">Ideal for you if you wish to grow lean muscle and build strength.</string>
    <string name="both_maintain">Both / Maintain</string>
    <string name="both_maintain_desc">Ideal for you if you wish to attain lean gains while loosing body fat.</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_desc">I am so exited to work with you!\n\n Please login or create an account to start your fitness journey with me!</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="add_profile_photo">Add Profile Photo</string>
    <string name="workouts">WORKOUTS</string>
    <string name="nutrition">NUTRITION</string>
    <string name="tips">TIPS</string>
    <string name="progress">PROGRESS</string>
    <string name="train_at_home">Train at Home</string>
    <string name="train_at_gym">Train At Gym</string>
    <string name="recommended_get_started">Choose from the recommended workout to get started!</string>
    <string name="recommended_workout">Recommended Wokouts</string>
    <string name="train_at">Train At</string>
    <string name="home">Home</string>
    <string name="gym">Gym</string>
    <string name="rounds">Rounds</string>
    <string name="reps">Reps</string>
    <string name="start">Start</string>
    <string name="hiit_cardio">HIIT Cardio</string>
    <string name="my_workouts">My Workouts</string>
    <string name="directions">Directions:</string>
    <string name="exit">Exit</string>
    <string name="coming_up">Coming Up</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="round">Round</string>
    <string name="zero_1">00:</string>
    <string name="zero_2">00:0</string>
    <string name="username">Hi, Alex!</string>
    <string name="username_desc">Let\'s get you PEACHI!</string>
    <string name="macros_summary">Macros Summary</string>
    <string name="target_calories">Target Calories</string>
    <string name="target_calories_count">1500 Kcal</string>
    <string name="proteins">Proteins</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fats">Fats</string>
    <string name="proteins_count">320g</string>
    <string name="carbohydrates_count">160g</string>
    <string name="fats_count">56g</string>
    <string name="nutrition_information">Nutrition Information</string>
    <string name="structuring_your_meals">Structuring your meals</string>
    <string name="grocery_list">Grocery List</string>
    <string name="select_your_goal">Select your Goal</string>
    <string name="weight_loss">Weight Loss</string>
    <string name="weight_gain">Weight Gain</string>
    <string name="meal_summary">Meal Summary</string>
    <string name="meal_1">Meal 1</string>
    <string name="meal_2">Meal 2</string>
    <string name="meal_3">Meal 3</string>
    <string name="meal_4">Meal 4</string>
    <string name="note">Note</string>
    <string name="tips_desc"><![CDATA[Some useful tips and information to go with your workout & nutrition.]]></string>
    <string name="tips_and_info"><![CDATA[Tips & Info]]></string>
    <string name="email_address">Email address</string>
    <string name="help_and_support"><![CDATA[Help & Support]]></string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sign_out">Sign out</string>
    <string name="measurements_and_goal">Measurements\nand Goal</string>
    <string name="before">Before</string>
    <string name="current">Current</string>
    <string name="profile_pic_transition">Profile Pic Transition</string>
    <string name="workoutTransition">Workout Transition</string>
    <string name="recommended_workoutTransition">Recommended Workout Transition</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
