<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlProfileContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/pink_gradient_dark_to_light"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_64"
        android:layout_toStartOf="@id/ivProfilePic"
        android:text="@string/username"
        android:textAppearance="@style/Bold"
        android:textColor="@color/back_arrow"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:id="@+id/tvUsernameDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvUsername"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_12"
        android:layout_toStartOf="@id/ivProfilePic"
        android:text="@string/username_desc"
        android:textAppearance="@style/Regular"
        android:textColor="@color/back_arrow"
        android:textSize="@dimen/sp_18" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="@dimen/dp_64"
        android:layout_height="@dimen/dp_64"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dp_64"
        android:layout_marginEnd="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_12"
        android:scaleType="fitCenter"
        android:src="@drawable/profile_pic"
        android:transitionName="@string/profile_pic_transition"
        app:riv_border_color="@color/step_heading"
        app:riv_border_width="@dimen/dp_4"
        app:riv_corner_radius="@dimen/dp_120" />

</RelativeLayout>