<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".fragments.StepTwoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvStepTwo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_64"
            android:textAllCaps="true"
            android:text="@string/step_2"
            android:textAppearance="@style/Bold"
            android:textColor="@color/step_heading"
            android:textSize="@dimen/sp_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvStepTwoDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/step_2_desc"
            android:textAppearance="@style/Regular"
            android:textColor="@color/step_heading_desc"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStepTwo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:background="@drawable/bg_email"
            android:hint="@string/age"
            android:padding="@dimen/dp_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStepTwoDesc">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="number"
                android:maxLines="1"
                android:textAppearance="@style/Regular"
                android:textSize="@dimen/sp_16" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilHeight"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@drawable/bg_email"
            android:hint="@string/weight"
            android:padding="@dimen/dp_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilAge">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="number"
                android:maxLines="1"
                android:textAppearance="@style/Regular"
                android:textSize="@dimen/sp_16" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@drawable/bg_email"
            android:hint="@string/height"
            android:padding="@dimen/dp_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilWeight">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="number"
                android:maxLines="1"
                android:textAppearance="@style/Regular"
                android:textSize="@dimen/sp_16" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilChest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@drawable/bg_email"
            android:hint="@string/chest"
            android:padding="@dimen/dp_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilHeight">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etChest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="number"
                android:maxLines="1"
                android:textAppearance="@style/Regular"
                android:textSize="@dimen/sp_16" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilHip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@drawable/bg_email"
            android:hint="@string/hip"
            android:padding="@dimen/dp_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilChest">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etHip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="number"
                android:maxLines="1"
                android:textAppearance="@style/Regular"
                android:textSize="@dimen/sp_16" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilWaist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilChest"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@drawable/bg_email"
            android:hint="@string/waist"
            android:padding="@dimen/dp_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilHip">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWaist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="number"
                android:maxLines="1"
                android:textAppearance="@style/Regular"
                android:textSize="@dimen/sp_16" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_48"
            android:layout_marginBottom="@dimen/dp_48"
            android:background="@drawable/bg_btn"
            android:paddingStart="@dimen/dp_64"
            android:paddingEnd="@dimen/dp_64"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textAppearance="@style/Regular"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilWaist"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>